<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="100dp">
    <TextView
        android:id="@+id/item_textview_1"
        android:text="@string/fragment_2_item1"
        android:textColor="#000"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_width="150dp"
        android:layout_height="match_parent" />
    <TextView
        android:id="@+id/item_textview_2"
        android:layout_marginLeft="20dp"
        android:textSize="25sp"
        android:gravity="center_vertical"
        android:text="@string/fragment_2_item2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />
    <TextView
        android:id="@+id/item_textview_3"
        android:textSize="25sp"
        android:gravity="center_vertical"
        android:text="@string/fragment_2_item3"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="150dp"/>
    <TextView
        android:id="@+id/item_textview_4"
        android:textSize="25sp"
        android:gravity="center_vertical"
        android:text="@string/fragment_2_item4"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="150dp"/>
</LinearLayout>
