<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="260dp">

    <LinearLayout
        android:id="@+id/tiku_36_layout_bg1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:background="#73C0F9"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tiku_36_time_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/tiku_36_time"
            android:textColor="#fff"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/tiku_36_image_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:src="@drawable/tiku36_item1" />

        <TextView
            android:id="@+id/tiku_36_tianqi_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/tiku_36_tianqi"
            android:textColor="#fff"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tiku_36_wendu_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/tiku_36_wendu"
            android:textColor="#fff"
            android:textSize="25sp" />
    </LinearLayout>
</LinearLayout>